make ProspectingBehavior code neater